Add NIO example

--- a/pom.xml
+++ b/pom.xml
@@ -1,11 +1,11 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
-  <groupId>com.intuit</groupId>
-  <artifactId>stockprice</artifactId>
+  <groupId>com.sample</groupId>
+  <artifactId>hystrix-tutorial</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>stockprice</name>
+  <name>hystrix-tutorial</name>
   <url>http://maven.apache.org</url>
   <dependencies>
     <dependency>
@@ -112,8 +112,35 @@
 			<artifactId>spring-context</artifactId>
 			<version>3.0.0.RELEASE</version>
 		</dependency>
-
-
+		<dependency>
+		    <groupId>io.reactivex</groupId>
+		    <artifactId>rxnetty</artifactId>
+		    <version>0.4.4</version>
+		</dependency>
+		<dependency>
+		    <groupId>io.netty</groupId>
+		    <artifactId>netty-codec-http</artifactId>
+		    <version>4.1.5.Final</version>
+		</dependency>
+		<dependency>
+		    <groupId>io.netty</groupId>
+		    <artifactId>netty-transport-native-epoll</artifactId>
+		    <version>4.1.5.Final</version>
+		</dependency>
+		<dependency>
+		    <groupId>io.netty</groupId>
+		    <artifactId>netty-handler</artifactId>
+		    <version>4.1.5.Final</version>
+		</dependency>
+		
+		
+		
+		<dependency>
+		    <groupId>org.slf4j</groupId>
+		    <artifactId>slf4j-api</artifactId>
+		    <version>1.7.21</version>
+		</dependency>
+		
   </dependencies>
   <build>
     <plugins>
