--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,12 @@
   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>com.sample</groupId>
-  <artifactId>hystrix-tutorial</artifactId>
+  <artifactId>solutions</artifactId>
   <packaging>jar</packaging>
   <version>1.0-SNAPSHOT</version>
-  <name>hystrix-tutorial</name>
+  <name>solutions</name>
   <url>http://maven.apache.org</url>
+
   <dependencies>
     <dependency>
 	<groupId>org.apache.httpcomponents</groupId>
